--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 			<div class="collapse navbar-collapse" id="ftco-nav">
 				<ul class="navbar-nav nav ml-auto">
 					<li class="nav-item"><a href="#home-section" class="nav-link"><span>Inicio</span></a></li>
+					<li class="nav-item"><a href="#skills-section" class="nav-link"><span>HORARIO DE SERVICIOS</span></a></li>
 					<li class="nav-item"><a href="#about-section" class="nav-link"><span>QUÉ ES CATRASTRO</span></a></li>
-					<li class="nav-item"><a href="#skills-section" class="nav-link"><span>Skills</span></a></li>
 					<li class="nav-item"><a href="#services-section" class="nav-link"><span>SERVICIOS</span></a></li>
 					<li class="nav-item"><a href="#projects-section" class="nav-link"><span>PROYECTOS</span></a></li>
 					<li class="nav-item"><a href="#blog-section" class="nav-link"><span>Blog</span></a></li>
@@ -85,11 +85,15 @@
 		</div>
 	</section>
 
-	<section class="ftco-counter img bg-light" id="section-counter">
+	<section class="ftco-counter img bg-light" id="skills-section">
 		<div class="container">
 			<div class="horario">
+				<div class="col-md-12 heading-section text-center ftco-animate">
+					
+				<span class="subheading">ORGULLOSAMENTE CHIMALHUACAN</span>
 				<h1>Casos resueltos <br> <br> </h1>
 			</div>
+		</div>
 			<div class="row">
 				<div class="col-md-3 justify-content-center counter-wrap ftco-animate">
 					<div class="block-18 d-flex">
@@ -97,7 +101,7 @@
 							<span class="flaticon-suitcase"></span>
 						</div>
 						<div class="text">
-							<strong class="number" data-number="750">0</strong>
+							<strong class="number" data-number="7500">0</strong>
 							<span>Catrasto Urbano</span>
 						</div>
 					</div>
@@ -108,7 +112,7 @@
 							<span class="flaticon-loyalty"></span>
 						</div>
 						<div class="text">
-							<strong class="number" data-number="568">0</strong>
+							<strong class="number" data-number="5680">0</strong>
 							<span>Catastro Rustico</span>
 						</div>
 					</div>
@@ -143,201 +147,20 @@
 		<div class="container">
 			<div class="row justify-content-center pb-5">
 				<div class="col-md-12 heading-section text-center ftco-animate">
-					<span class="subheading">Skills</span>
-					<h2 class="mb-4">My Skills</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+					<span class="subheading">CHIMALHUACAN</span>
+					<h2 class="mb-4">OFICINA DE CATASTRO MUNICIPAL</h2>
+					<p><H3>HORARIO DE ATENCION AL PÚBLICO</H3></p>
+					<P><h4>08:30 am - 03:30 pm</h4></P>
+					<p><h3>COBRO DE IMPUESTO PREDIAL</h3></p>
+					<p><h4>08:30 am - 02:30 pm</h4></p>
+					<p><h3>OTROS SETVICIOS CATASTRALES</h3></p>
+					<p><h4>08:30 am - 03:30 pm</h4></p>
 				</div>
 			</div>
-			<div class="row progress-circle mb-5">
-				<div class="col-lg-4 mb-4">
-					<div class="bg-white rounded-lg shadow p-4">
-						<h2 class="h5 font-weight-bold text-center mb-4">CSS</h2>
-
-						<!-- Progress bar 1 -->
-						<div class="progress mx-auto" data-value='95'>
-							<span class="progress-left">
-								<span class="progress-bar border-primary"></span>
-							</span>
-							<span class="progress-right">
-								<span class="progress-bar border-primary"></span>
-							</span>
-							<div class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
-								<div class="h2 font-weight-bold">95<sup class="small">%</sup></div>
-							</div>
-						</div>
-						<!-- END -->
-
-						<!-- Demo info -->
-						<div class="row text-center mt-4">
-							<div class="col-6 border-right">
-								<div class="h4 font-weight-bold mb-0">28%</div><span class="small text-gray">Last week</span>
-							</div>
-							<div class="col-6">
-								<div class="h4 font-weight-bold mb-0">60%</div><span class="small text-gray">Last month</span>
-							</div>
-						</div>
-						<!-- END -->
-					</div>
-				</div>
-
-				<div class="col-lg-4 mb-4">
-					<div class="bg-white rounded-lg shadow p-4">
-						<h2 class="h5 font-weight-bold text-center mb-4">HTML</h2>
-
-						<!-- Progress bar 1 -->
-						<div class="progress mx-auto" data-value='98'>
-							<span class="progress-left">
-								<span class="progress-bar border-primary"></span>
-							</span>
-							<span class="progress-right">
-								<span class="progress-bar border-primary"></span>
-							</span>
-							<div class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
-								<div class="h2 font-weight-bold">98<sup class="small">%</sup></div>
-							</div>
-						</div>
-						<!-- END -->
-
-						<!-- Demo info -->
-						<div class="row text-center mt-4">
-							<div class="col-6 border-right">
-								<div class="h4 font-weight-bold mb-0">28%</div><span class="small text-gray">Last week</span>
-							</div>
-							<div class="col-6">
-								<div class="h4 font-weight-bold mb-0">60%</div><span class="small text-gray">Last month</span>
-							</div>
-						</div>
-						<!-- END -->
-					</div>
-				</div>
-
-				<div class="col-lg-4 mb-4">
-					<div class="bg-white rounded-lg shadow p-4">
-						<h2 class="h5 font-weight-bold text-center mb-4">jQuery</h2>
-
-						<!-- Progress bar 1 -->
-						<div class="progress mx-auto" data-value='68'>
-							<span class="progress-left">
-								<span class="progress-bar border-primary"></span>
-							</span>
-							<span class="progress-right">
-								<span class="progress-bar border-primary"></span>
-							</span>
-							<div class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
-								<div class="h2 font-weight-bold">68<sup class="small">%</sup></div>
-							</div>
-						</div>
-						<!-- END -->
-
-						<!-- Demo info -->
-						<div class="row text-center mt-4">
-							<div class="col-6 border-right">
-								<div class="h4 font-weight-bold mb-0">28%</div><span class="small text-gray">Last week</span>
-							</div>
-							<div class="col-6">
-								<div class="h4 font-weight-bold mb-0">60%</div><span class="small text-gray">Last month</span>
-							</div>
-						</div>
-						<!-- END -->
-					</div>
-				</div>
-
-				<div class="col-lg-4 mb-4">
-					<div class="bg-white rounded-lg shadow p-4">
-						<h2 class="h5 font-weight-bold text-center mb-4">Photoshop</h2>
-
-						<!-- Progress bar 1 -->
-						<div class="progress mx-auto" data-value='92'>
-							<span class="progress-left">
-								<span class="progress-bar border-primary"></span>
-							</span>
-							<span class="progress-right">
-								<span class="progress-bar border-primary"></span>
-							</span>
-							<div class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
-								<div class="h2 font-weight-bold">92<sup class="small">%</sup></div>
-							</div>
-						</div>
-						<!-- END -->
-
-						<!-- Demo info -->
-						<div class="row text-center mt-4">
-							<div class="col-6 border-right">
-								<div class="h4 font-weight-bold mb-0">28%</div><span class="small text-gray">Last week</span>
-							</div>
-							<div class="col-6">
-								<div class="h4 font-weight-bold mb-0">60%</div><span class="small text-gray">Last month</span>
-							</div>
-						</div>
-						<!-- END -->
-					</div>
-				</div>
-
-				<div class="col-lg-4 mb-4">
-					<div class="bg-white rounded-lg shadow p-4">
-						<h2 class="h5 font-weight-bold text-center mb-4">WordPress</h2>
-
-						<!-- Progress bar 1 -->
-						<div class="progress mx-auto" data-value='83'>
-							<span class="progress-left">
-								<span class="progress-bar border-primary"></span>
-							</span>
-							<span class="progress-right">
-								<span class="progress-bar border-primary"></span>
-							</span>
-							<div class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
-								<div class="h2 font-weight-bold">83<sup class="small">%</sup></div>
-							</div>
-						</div>
-						<!-- END -->
-
-						<!-- Demo info -->
-						<div class="row text-center mt-4">
-							<div class="col-6 border-right">
-								<div class="h4 font-weight-bold mb-0">28%</div><span class="small text-gray">Last week</span>
-							</div>
-							<div class="col-6">
-								<div class="h4 font-weight-bold mb-0">60%</div><span class="small text-gray">Last month</span>
-							</div>
-						</div>
-						<!-- END -->
-					</div>
-				</div>
-
-				<div class="col-lg-4 mb-4">
-					<div class="bg-white rounded-lg shadow p-4">
-						<h2 class="h5 font-weight-bold text-center mb-4">SEO</h2>
-
-						<!-- Progress bar 1 -->
-						<div class="progress mx-auto" data-value='95'>
-							<span class="progress-left">
-								<span class="progress-bar border-primary"></span>
-							</span>
-							<span class="progress-right">
-								<span class="progress-bar border-primary"></span>
-							</span>
-							<div class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
-								<div class="h2 font-weight-bold">95<sup class="small">%</sup></div>
-							</div>
-						</div>
-						<!-- END -->
-
-						<!-- Demo info -->
-						<div class="row text-center mt-4">
-							<div class="col-6 border-right">
-								<div class="h4 font-weight-bold mb-0">28%</div><span class="small text-gray">Last week</span>
-							</div>
-							<div class="col-6">
-								<div class="h4 font-weight-bold mb-0">60%</div><span class="small text-gray">Last month</span>
-							</div>
-						</div>
-						<!-- END -->
-					</div>
-				</div>
-			</div>
+			
 		</div>
 	</section>
-
+	<br><br><br><br>
 	<section class="ftco-about ftco-section ftco-no-pt ftco-no-pb" id="about-section">
 		<div class="container">
 			<div class="row d-flex no-gutters">
@@ -352,7 +175,7 @@
 					<div class="py-md-5">
 						<div class="row justify-content-start pb-3">
 							<div class="col-md-12 heading-section ftco-animate">
-								<span class="subheading">catastro</span>
+								<span class="subheading">ORGULLOSAMENTE CHIMALHUACAN</span>
 								<h2 class="mb-4" style="font-size: 34px; text-transform: capitalize;">QUÉ ES EL CATRASTRO MUNICIPAL </h2>
 								<p>		El catastro, en términos generales, es el censo analítico de la 
 									propiedad inmobiliaria, que tiene el propósito de ubicar, describir y 
@@ -407,19 +230,14 @@
 			</div>
 		</div>
 	</section>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+    <br><br><br><br>
 	<section class="ftco-about ftco-section ftco-no-pt ftco-no-pb" id="about-section">
 		<div class="container">
 			<div class="row d-flex no-gutters">
 				<div class="col-md-6 col-lg-5 d-flex">
 					<div class="img-about img d-flex align-items-stretch">
 						<div class="overlay"></div>
-						<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/GUERREROCHIMALLI.jpg);">
+						<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/chimalhuacan.jpg);">
 						</div>
 					</div>
 				</div>
@@ -427,7 +245,7 @@
 					<div class="py-md-5">
 						<div class="row justify-content-start pb-3">
 							<div class="col-md-12 heading-section ftco-animate">
-								<span class="subheading">catastro</span>
+								<span class="subheading">ORGULLOSAMENTE CHIMALHUACAN</span>
 								<h2 class="mb-4" style="font-size: 34px; text-transform: capitalize;">IMPORTANCIA DEL CATASTRO MUNICIPAL</h2>
 								<p>	Para el municipio, el catastro permite censar y conocer los bienes 
 									inmuebles asentados en su territorio, registrar los datos exactos 
@@ -1002,15 +820,15 @@
 		<div class="container">
 			<div class="row justify-content-center mb-5 pb-3">
 				<div class="col-md-7 heading-section text-center ftco-animate">
-					<span class="subheading">Contact us</span>
-					<h2 class="mb-4">Have a Project?</h2>
+					<span class="subheading">CHIMALHUACAN</span>
+					<h2 class="mb-4">CONTACTANOS</h2>
 					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
 				</div>
 			</div>
 
 			<div class="row block-9">
 				<div class="col-md-8">
-					<form action="#" class="bg-light p-4 p-md-5 contact-form">
+					<!--<form action="#" class="bg-light p-4 p-md-5 contact-form">
 						<div class="row">
 							<div class="col-md-6">
 								<div class="form-group">
@@ -1038,7 +856,7 @@
 								</div>
 							</div>
 						</div>
-					</form>
+					</form>-->
 					
 				</div>
 
@@ -1049,7 +867,7 @@
 								<span class="fa fa-map-marker"></span>
 							</div>
 							<div class="text">
-								<p><span>Address:</span> 198 West 21th Street, Suite 721 New York NY 10016</p>
+								<p><span>DIRECCIÓN</span>Silvestre Barajas No.49</p>
 							</div>
 						</div>
 						<div class="dbox w-100 d-flex">
@@ -1065,7 +883,7 @@
 								<span class="fa fa-paper-plane"></span>
 							</div>
 							<div class="text">
-								<p><span>Email:</span> <a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
+								<p><span>Correo Electronico:</span> <a href="mailto:info@yoursite.com">catastro@villahidalgo.gob.mx </a></p>
 							</div>
 						</div>
 						<div class="dbox w-100 d-flex">
@@ -1073,7 +891,7 @@
 								<span class="fa fa-globe"></span>
 							</div>
 							<div class="text">
-								<p><span>Website</span> <a href="#">yoursite.com</a></p>
+								<p><span>Website</span> <a href="#">www.villahidalgo.gob.mx</a></p>
 							</div>
 						</div>
 					</div>
