--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 				<ul class="navbar-nav nav ml-auto">
 					<li class="nav-item"><a href="#home-section" class="nav-link"><span>Inicio</span></a></li>
 					<li class="nav-item"><a href="#skills-section" class="nav-link"><span>HORARIO DE SERVICIOS</span></a></li>
-					<li class="nav-item"><a href="#about-section" class="nav-link"><span>QUÉ ES CATRASTRO</span></a></li>
 					<li class="nav-item"><a href="#services-section" class="nav-link"><span>SERVICIOS</span></a></li>
+					<li class="nav-item"><a href="#about-section" class="nav-link"><span>QUÉ ES CATRASTRO</span></a></li>
 					<li class="nav-item"><a href="#projects-section" class="nav-link"><span>PROYECTOS</span></a></li>
 					<li class="nav-item"><a href="#blog-section" class="nav-link"><span>Blog</span></a></li>
 					<li class="nav-item"><a href="#contact-section" class="nav-link"><span>CONTACTANOS</span></a></li>
@@ -68,7 +68,7 @@
 				<div class="overlay"></div>
 				<div class="container-fluid px-md-0">
 					<div class="row d-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-						<div class="one-third order-md-last img" style="background-image:url(images/chimal.jpg);">
+						<div class="one-third order-md-last img" style="background-image:url(images/cata.png);">
 							<div class="overlay"></div>
 							<div class="overlay-1"></div>
 						</div>
@@ -160,6 +160,97 @@
 			
 		</div>
 	</section>
+
+	<section class="ftco-section" id="services-section">
+		<div class="container">
+			<div class="row justify-content-center">
+				<div class="col-md-12 heading-section text-center ftco-animate mb-5">
+					<span class="subheading">catastro</span>
+					<h2 class="mb-4">SERVICIOS</h2>
+					<!--<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>-->
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-md-6 col-lg-3">
+					<div class="media block-6 services d-block bg-white rounded-lg shadow ftco-animate">
+						<div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-3d-design"></span></div>
+						<div class="media-body">
+							<h3 class="heading mb-3">Localización y levantamiento de predios </h3>
+							<p>A small river named Duden flows by their place and supplies.</p>
+						</div>
+					</div> 
+				</div>
+				<div class="col-md-6 col-lg-3">
+					<div class="media block-6 services d-block bg-white rounded-lg shadow ftco-animate">
+						<div class="icon shadow d-flex align-items-center justify-content-center"><span class="flaticon-app-development"></span></div>
+						<div class="media-body">
+							<h3 class="heading mb-3">Elaboración e integración de la cartografía catastral</h3>
+							<p>A small river named Duden flows by their place and supplies.</p>
+						</div>
+					</div> 
+				</div>
+				<div class="col-md-6 col-lg-3">
+					<div class="media block-6 services d-block bg-white rounded-lg shadow ftco-animate">
+						<div class="icon shadow d-flex align-items-center justify-content-center"><span class="flaticon-web-programming"></span></div>
+						<div class="media-body">
+							<h3 class="heading mb-3">Aplicación de tablas de valores unitarios, formuladas por el Gobierno Estatal y los Municipios</h3>
+							<p>A small river named.</p>
+						</div>
+					</div> 
+				</div>
+				<!--<div class="col-md-6 col-lg-3">
+					<div class="media block-6 services d-block bg-white rounded-lg shadow ftco-animate">
+						<div class="icon shadow d-flex align-items-center justify-content-center"><span class="flaticon-branding"></span></div>
+						<div class="media-body">
+							<h3 class="heading mb-3">Valuación catastral</h3>
+							<p>A small river named Duden flows by their place and supplies.</p>
+						</div>
+					</div> 
+				</div>
+			</div>-->
+
+			<div class="row">
+				<div class="col-md-6 col-lg-3">
+					<div class="media block-6 services d-block bg-white rounded-lg shadow ftco-animate">
+						<div class="icon shadow d-flex align-items-center justify-content-center"><span class="flaticon-computer"></span></div>
+						<div class="media-body">
+							<h3 class="heading mb-3">Deslinde catastral</h3>
+							<p>A small river named Duden flows by their place and supplies.</p>
+						</div>
+					</div> 
+				</div>
+				<div class="col-md-6 col-lg-3">
+					<div class="media block-6 services d-block bg-white rounded-lg shadow ftco-animate">
+						<div class="icon shadow d-flex align-items-center justify-content-center"><span class="flaticon-vector"></span></div>
+						<div class="media-body">
+							<h3 class="heading mb-3">Notificación</h3>
+							<p>A small river named Duden flows by their place and supplies.</p>
+						</div>
+					</div> 
+				</div>
+				<div class="col-md-6 col-lg-3">
+					<div class="media block-6 services d-block bg-white rounded-lg shadow ftco-animate">
+						<div class="icon shadow d-flex align-items-center justify-content-center"><span class="flaticon-vector"></span></div>
+						<div class="media-body">
+							<h3 class="heading mb-3">Valuación catastral</h3>
+							<p>A small river named Duden flows by their place and supplies.</p>
+						</div>
+					</div> 
+				</div>
+				<!--<div class="col-md-6 col-lg-3">
+					<div class="media block-6 services d-block bg-white rounded-lg shadow ftco-animate">
+						<div class="icon shadow d-flex align-items-center justify-content-center"><span class="flaticon-zoom"></span></div>
+						<div class="media-body">
+							<h3 class="heading mb-3">SEO</h3>
+							<p>A small river named Duden flows by their place and supplies.</p>
+						</div>
+					</div> 
+				</div>
+			</div>
+		</div>-->
+	</section>
+
 	<br><br><br><br>
 	<section class="ftco-about ftco-section ftco-no-pt ftco-no-pb" id="about-section">
 		<div class="container">
@@ -167,7 +258,7 @@
 				<div class="col-md-6 col-lg-5 d-flex">
 					<div class="img-about img d-flex align-items-stretch">
 						<div class="overlay"></div>
-						<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/GUERREROCHIMALLI.jpg);">
+						<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/centro_chima.jpg);">
 						</div>
 					</div>
 				</div>
@@ -175,7 +266,7 @@
 					<div class="py-md-5">
 						<div class="row justify-content-start pb-3">
 							<div class="col-md-12 heading-section ftco-animate">
-								<span class="subheading">ORGULLOSAMENTE CHIMALHUACAN</span>
+								<span class="subheading">CHIMALHUACAN</span>
 								<h2 class="mb-4" style="font-size: 34px; text-transform: capitalize;">QUÉ ES EL CATRASTRO MUNICIPAL </h2>
 								<p>		El catastro, en términos generales, es el censo analítico de la 
 									propiedad inmobiliaria, que tiene el propósito de ubicar, describir y 
@@ -231,6 +322,7 @@
 		</div>
 	</section>
     <br><br><br><br>
+
 	<section class="ftco-about ftco-section ftco-no-pt ftco-no-pb" id="about-section">
 		<div class="container">
 			<div class="row d-flex no-gutters">
@@ -255,6 +347,74 @@
 									cobro de diferentes impuestos a la propiedad inmobiliaria, como son el 
 									predial y el de traslación de dominio, entre otros, pero ello sólo los 
 									puede realizar si cuenta con un Catastro Municipal.</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<br><br><br><br>
+
+	<section class="ftco-about ftco-section ftco-no-pt ftco-no-pb" id="about-section">
+		<div class="container">
+			<div class="row d-flex no-gutters">
+				<div class="col-md-6 col-lg-5 d-flex">
+					<div class="img-about img d-flex align-items-stretch">
+						<div class="overlay"></div>
+						<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/c_g.png);">
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6 col-lg-7 pl-md-4 pl-lg-5 py-5">
+					<div class="py-md-5">
+						<div class="row justify-content-start pb-3">
+							<div class="col-md-12 heading-section ftco-animate">
+								<span class="subheading">CHIMALHUACAN</span>
+								<h2 class="mb-4" style="font-size: 34px; text-transform: capitalize;">CATASTRO URBANO </h2>
+								<p>		El catastro urbano tiene como propósito principal la ubicación y registro de bienes 
+									inmuebles de uso múltiple.<BR>El catastro urbano es más complejo debido a que el uso de los predios y 
+										construcciones es más diverso, lo que permite que la propiedad inmobiliaria se 
+										destine a fines industriales, comerciales y sociales.
+										impositivos.</BR> </p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<br><br><br><br>
+
+	<section class="ftco-about ftco-section ftco-no-pt ftco-no-pb" id="about-section">
+		<div class="container">
+			<div class="row d-flex no-gutters">
+				<div class="col-md-6 col-lg-5 d-flex">
+					<div class="img-about img d-flex align-items-stretch">
+						<div class="overlay"></div>
+						<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/GUERREROCHIMALLI.jpg);">
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6 col-lg-7 pl-md-4 pl-lg-5 py-5">
+					<div class="py-md-5">
+						<div class="row justify-content-start pb-3">
+							<div class="col-md-12 heading-section ftco-animate">
+								<span class="subheading">CHIMALHUACAN</span>
+								<h2 class="mb-4" style="font-size: 34px; text-transform: capitalize;">CATASTRO RUSTICO</h2>
+								<p>		El catastro rustico se orienta a la captación y sistematización de información sobre 
+									los predios rurales de los municipios, con dos propósitos: <br>• Detectar los usos productivos del suelo rural 
+									<br>• Ubicar a los propietarios de los predios rurales 
+									 <BR>En el catastro rural, lo importante es destacar la utilidad productiva del suelo en 
+										materia agropecuaria, razón por la cual las construcciones, aunque tomadas en 
+										cuenta, no tienen el mismo interés que los predios. Este tipo de catastro 
+										proporciona una serie de catálogos municipales de los predios rurales.  En caso de 
+										que sean necesarias acciones de regularización, se hacen las revisiones y dictámenes correspondientes 
+										por las autoridades competentes, con base en los expedientes prediales proporcionados por el catastro rural. </BR> </p>
 									</div>
 								</div>
 							</div>
@@ -462,96 +622,6 @@
 				</div>
 			</div>
 		</div>
-	</section>
-
-	<section class="ftco-section" id="services-section">
-		<div class="container">
-			<div class="row justify-content-center">
-				<div class="col-md-12 heading-section text-center ftco-animate mb-5">
-					<span class="subheading">catastro</span>
-					<h2 class="mb-4">SERVICIOS</h2>
-					<!--<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>-->
-				</div>
-			</div>
-
-			<div class="row">
-				<div class="col-md-6 col-lg-3">
-					<div class="media block-6 services d-block bg-white rounded-lg shadow ftco-animate">
-						<div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-3d-design"></span></div>
-						<div class="media-body">
-							<h3 class="heading mb-3">Localización y levantamiento de predios </h3>
-							<p>A small river named Duden flows by their place and supplies.</p>
-						</div>
-					</div> 
-				</div>
-				<div class="col-md-6 col-lg-3">
-					<div class="media block-6 services d-block bg-white rounded-lg shadow ftco-animate">
-						<div class="icon shadow d-flex align-items-center justify-content-center"><span class="flaticon-app-development"></span></div>
-						<div class="media-body">
-							<h3 class="heading mb-3">Elaboración e integración de la cartografía catastral</h3>
-							<p>A small river named Duden flows by their place and supplies.</p>
-						</div>
-					</div> 
-				</div>
-				<div class="col-md-6 col-lg-3">
-					<div class="media block-6 services d-block bg-white rounded-lg shadow ftco-animate">
-						<div class="icon shadow d-flex align-items-center justify-content-center"><span class="flaticon-web-programming"></span></div>
-						<div class="media-body">
-							<h3 class="heading mb-3">Aplicación de tablas de valores unitarios, formuladas por el Gobierno Estatal y los Municipios</h3>
-							<p>A small river named.</p>
-						</div>
-					</div> 
-				</div>
-				<!--<div class="col-md-6 col-lg-3">
-					<div class="media block-6 services d-block bg-white rounded-lg shadow ftco-animate">
-						<div class="icon shadow d-flex align-items-center justify-content-center"><span class="flaticon-branding"></span></div>
-						<div class="media-body">
-							<h3 class="heading mb-3">Valuación catastral</h3>
-							<p>A small river named Duden flows by their place and supplies.</p>
-						</div>
-					</div> 
-				</div>
-			</div>-->
-
-			<div class="row">
-				<div class="col-md-6 col-lg-3">
-					<div class="media block-6 services d-block bg-white rounded-lg shadow ftco-animate">
-						<div class="icon shadow d-flex align-items-center justify-content-center"><span class="flaticon-computer"></span></div>
-						<div class="media-body">
-							<h3 class="heading mb-3">Deslinde catastral</h3>
-							<p>A small river named Duden flows by their place and supplies.</p>
-						</div>
-					</div> 
-				</div>
-				<div class="col-md-6 col-lg-3">
-					<div class="media block-6 services d-block bg-white rounded-lg shadow ftco-animate">
-						<div class="icon shadow d-flex align-items-center justify-content-center"><span class="flaticon-vector"></span></div>
-						<div class="media-body">
-							<h3 class="heading mb-3">Notificación</h3>
-							<p>A small river named Duden flows by their place and supplies.</p>
-						</div>
-					</div> 
-				</div>
-				<div class="col-md-6 col-lg-3">
-					<div class="media block-6 services d-block bg-white rounded-lg shadow ftco-animate">
-						<div class="icon shadow d-flex align-items-center justify-content-center"><span class="flaticon-vector"></span></div>
-						<div class="media-body">
-							<h3 class="heading mb-3">Valuación catastral</h3>
-							<p>A small river named Duden flows by their place and supplies.</p>
-						</div>
-					</div> 
-				</div>
-				<!--<div class="col-md-6 col-lg-3">
-					<div class="media block-6 services d-block bg-white rounded-lg shadow ftco-animate">
-						<div class="icon shadow d-flex align-items-center justify-content-center"><span class="flaticon-zoom"></span></div>
-						<div class="media-body">
-							<h3 class="heading mb-3">SEO</h3>
-							<p>A small river named Duden flows by their place and supplies.</p>
-						</div>
-					</div> 
-				</div>
-			</div>
-		</div>-->
 	</section>
 
 	<section class="ftco-hireme">
