--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				<div class="overlay"></div>
 				<div class="container-fluid px-md-0">
 					<div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-						<div class="one-third order-md-last img" style="background-image:url(images/chima_p1.jpg);">
+						<div class="one-third order-md-last img" style="background-image:url(images/catadeb.jpg);">
 							<div class="overlay"></div>
 							<div class="overlay-1"></div>
 						</div>
