--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<div class="collapse navbar-collapse" id="ftco-nav">
 				<ul class="navbar-nav nav ml-auto">
 					<li class="nav-item"><a href="#home-section" class="nav-link"><span>Inicio</span></a></li>
-					<li class="nav-item"><a href="#skills-section" class="nav-link"><span>HORARIO DE SERVICIOS</span></a></li>
+					<li class="nav-item"><a href="#skills-section" class="nav-link"><span>HORARIO</span></a></li>
 					<li class="nav-item"><a href="#services-section" class="nav-link"><span>SERVICIOS</span></a></li>
 					<li class="nav-item"><a href="#about-section" class="nav-link"><span>QUÉ ES CATRASTRO</span></a></li>
 					<li class="nav-item"><a href="#projects-section" class="nav-link"><span>PROYECTOS</span></a></li>
