--- a/index.html
+++ b/index.html
@@ -429,9 +429,9 @@
 		<div class="container">
 			<div class="row justify-content-center pb-5">
 				<div class="col-md-12 heading-section text-center ftco-animate">
-					<span class="subheading">Skills</span>
-					<h2 class="mb-4">My Skills</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+					<span class="subheading">CHIMALHUACAN</span>
+					<h2 class="mb-4">TRABAJOS REALIZADOS</h2>
+					<!--<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>-->
 				</div>
 			</div>
 			<div class="row progress-circle mb-5">
