--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 			<div class="collapse navbar-collapse" id="ftco-nav">
 				<ul class="navbar-nav nav ml-auto">
 					<li class="nav-item"><a href="#home-section" class="nav-link"><span>Inicio</span></a></li>
+					<li class="nav-item"><a href="#video-section" class="nav-link"><span>Video</span></a></li>
 					<li class="nav-item"><a href="#skills-section" class="nav-link"><span>HORARIO</span></a></li>
 					<li class="nav-item"><a href="#services-section" class="nav-link"><span>SERVICIOS</span></a></li>
 					<li class="nav-item"><a href="#about-section" class="nav-link"><span>QUÉ ES CATRASTRO</span></a></li>
@@ -76,12 +77,28 @@
 							<div class="text">
 								<!-- <span class="subheading">We Design &amp; Build Brands</span> -->
 								<h1 class="mb-4 mt-3"><span>ORGULLOSAMENTE</span> CHIMALHUACAN.</h1>
-								<!--<p><a href="#" class="btn btn-primary">Hire me</a> <a href="#" class="btn btn-primary btn-outline-primary">Download CV</a></p>-->
+								<p><a href="#" class="btn btn-primary">Hire me</a> <a href="#" class="btn btn-primary btn-outline-primary">Download CV</a></p>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
+		</div>
+	</section>
+
+	<section class="ftco-counter img bg-light" id="video-section">
+		<div class="container">
+			<div class="horario">
+				<div class="col-md-12 heading-section text-center ftco-animate">
+					
+				<span class="subheading">ORGULLOSAMENTE CHIMALHUACAN</span>
+				<h1>Video<br> <br> </h1>
+
+				<video width="700" height="370" autoplay controls>
+					<source src="images/bienvenida_Catastro.mp4" type="video/mp4">
+
+			</div>
+		</div>
 		</div>
 	</section>
 
