--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
 							<div class="text">
 								<!--<span class="subheading">Hello! This is Clyde</span> -->
 								<h1 class="mb-4 mt-3"><span>BIENVENIDO</span> DIRECCION DE CATASTRO MUNICIPAL</h1>
-								<!--<p><h1><span>HORARIO DE ATENCION AL PÚBLICO</span></h1></p>-->
+								<p><h6><span>Ocupas ayuda ve el video</span></h6></p>
 								<!--<p><a href="#" class="btn btn-primary">Hire me</a> <a href="#" class="btn btn-primary btn-outline-primary">Download CV</a></p> -->
+								<p><a href="#video-section" class="btn btn-primary btn-outline-primary">Ver vídeo</a> </p>
 							</div>
 						</div>
 					</div>
@@ -77,7 +78,8 @@
 							<div class="text">
 								<!-- <span class="subheading">We Design &amp; Build Brands</span> -->
 								<h1 class="mb-4 mt-3"><span>ORGULLOSAMENTE</span> CHIMALHUACAN.</h1>
-								<p><a href="#" class="btn btn-primary">Hire me</a> <a href="#" class="btn btn-primary btn-outline-primary">Download CV</a></p>
+								<p><h6><span>Ocupas ayuda ve el video</span></h6></p>
+								<p><a href="#video-section" class="btn btn-primary btn-outline-primary">Ver vídeo</a> </p>
 							</div>
 						</div>
 					</div>
@@ -91,8 +93,8 @@
 			<div class="horario">
 				<div class="col-md-12 heading-section text-center ftco-animate">
 					
-				<span class="subheading">ORGULLOSAMENTE CHIMALHUACAN</span>
-				<h1>Video<br> <br> </h1>
+				<span class="subheading">CATASTRO CHIMALHUACAN</span>
+				<h1>Video</h1>
 
 				<video width="700" height="370" autoplay controls>
 					<source src="images/bienvenida_Catastro.mp4" type="video/mp4">
@@ -107,7 +109,7 @@
 			<div class="horario">
 				<div class="col-md-12 heading-section text-center ftco-animate">
 					
-				<span class="subheading">ORGULLOSAMENTE CHIMALHUACAN</span>
+				<span class="subheading">CATASTRO CHIMALHUACAN</span>
 				<h1>Casos resueltos <br> <br> </h1>
 			</div>
 		</div>
