--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							<div class="text">
 								<!--<span class="subheading">Hello! This is Clyde</span> -->
 								<h1 class="mb-4 mt-3"><span>BIENVENIDO</span> DIRECCION DE CATASTRO MUNICIPAL</h1>
-								<p><h4><span>Ocupas ayuda ve el video</span></h6></p>
+								<p><h4><span>Ocupas ayuda ve el video</span></h4></p>
 								<!--<p><a href="#" class="btn btn-primary">Hire me</a> <a href="#" class="btn btn-primary btn-outline-primary">Download CV</a></p> -->
 								<p><a href="#video-section" class="btn btn-primary btn-outline-primary">Ver vídeo</a> </p>
 							</div>
@@ -66,7 +66,7 @@
 				</div>
 			</div>
 
-			<!--<div class="slider-item">
+			<div class="slider-item">
 				<div class="overlay"></div>
 				<div class="container-fluid px-md-0">
 					<div class="row d-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
@@ -77,14 +77,14 @@
 						<div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 							<div class="text">
 								<!-- <span class="subheading">We Design &amp; Build Brands</span> -->
-								<!--<h1 class="mb-4 mt-3"><span>ORGULLOSAMENTE</span> CHIMALHUACAN.</h1>
-								<p><h6><span>Ocupas ayuda ve el video</span></h6></p>
+								<h1 class="mb-4 mt-3"><span>ORGULLOSAMENTE</span> CHIMALHUACAN.</h1>
+								<p><h4><span>Ocupas ayuda ve el video</span></h4></p>
 								<p><a href="#video-section" class="btn btn-primary btn-outline-primary">Ver vídeo</a> </p>
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>-->
+			</div>
 		</div>
 	</section>
 
