--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 				<span class="subheading">CATASTRO CHIMALHUACAN</span>
 				<h1>Video</h1>
 
-				<video width="700" height="370" autoplay controls>
-					<source src="images/bienvenida_Catastro.mp4" type="video/mp">
+				<video width="500" height="250" autoplay controls>
+					<source src="images/bienvenida_Catastro.mp4" type="video/mp4">
 
 			</div>
 		</div>
