--- a/index.html
+++ b/index.html
@@ -97,7 +97,9 @@
 					
 				<span class="subheading">CATASTRO CHIMALHUACAN</span>
 				<h1>Video</h1>
-
+				<div>
+					<a href="chatbot.html" class="btn btn-primary btn-outline-primary">Habla con Mapin</a>
+				</div>
 				<video width="999" height="550" autoplay controls>
 					<source src="images/bienvenida_Catastro.mp4" type="video/mp4">
 
